[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
env_file = { git = "https://github.com/sergz72/env_file.git" }
split_string = { git = "https://github.com/sergz72/split_string.git" }